# purs-oxide

./: .gitmodules  .gitpod.yml  Cargo.toml  NOTES.md  README.md  TODO.md  build.rs  install-hooks.sh  pipeline.dot  test.txt
.docker/: Dockerfile
.github/workflows/: build.yml
docs/: Architecture.md  Makefile  queries.dot
ffi_test/: Console.js  Console.purs
hooks/: pre-commit
random/: test.purs
src/: .typecheck.rs.pending-snap  ast.rs  codegen.rs  desugar_rename.rs  errors.rs  indexed_module.rs  lexer.rs  lib.rs  main.rs  parser.lalrpop  parser.rs  pretty_printer.rs  prim.rs  rename.rs  renamed_module.rs  scc.rs  source_span.rs  string.rs  symbol.rs  token.rs  typecheck.rs  types.rs  utils.rs
src/ast/: declarations.rs  expr.rs  meta.rs  mod.rs  types.rs
src/snapshots/: purs_oxide__codegen__bundle_tests__bundle_export.snap  purs_oxide__codegen__bundle_tests__bundle_main.snap  purs_oxide__codegen__bundle_tests__function_call.snap  purs_oxide__codegen__bundle_tests__simple1.snap  purs_oxide__codegen__bundle_tests__simple_dep.snap  purs_oxide__codegen__bundle_tests__transitive_dep.snap  purs_oxide__desugar_rename__tests__duplicate_data_decl.snap  purs_oxide__desugar_rename__tests__duplicate_value.snap  purs_oxide__desugar_rename__tests__foreign_import.snap  purs_oxide__desugar_rename__tests__index_data_decl.snap  purs_oxide__desugar_rename__tests__type_alias.snap  purs_oxide__desugar_rename__tests__type_and_data_decl_conflict.snap  purs_oxide__desugar_rename__tests__type_sig_without_equations_1.snap  purs_oxide__desugar_rename__tests__type_sig_without_equations_2.snap  purs_oxide__desugar_rename__tests__type_sig_without_equations_3.snap  purs_oxide__desugar_rename__tests__value_decl.snap  (+172 more)
tests/: program_tests.rs
(+4 files in other folders)
