[package]
name = "purr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
lalrpop-util = {version="0.19.8", features=["lexer"]}
regex = "1"

[dev-dependencies]
insta = "1.14.0"
indoc = "1.0"
test-generator = "0.3.0"
pretty_assertions = "1.2.1"
