[package]
name = "purs-oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.9"

[dependencies]
lalrpop-util = {version="0.19.9", features=["lexer"]}
log = "0.4.17"
num = "0.4.0"
regex = "1"
unicode-general-category = "0.6.0"

[dev-dependencies]
insta = "1.14.0"
indoc = "1.0"
test-generator = "0.3.0"
pretty_assertions = "1.2.1"
