[package]
name = "purs-oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.9"

[dependencies]
lalrpop-util = {version="0.19.9", features=["lexer"]}
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_debug"] }
num = "0.4.0"
regex = "1"
unicode-general-category = "0.6.0"

derive-new = "0.5.9"
salsa = { git = "https://github.com/zyla/salsa.git", branch = "derive-debug-withdb", package = "salsa-2022" }
dashmap = "5.4.0"
anyhow = "1.0.70"
ordered-float = "3.6.0"
rayon = "1.7.0"
fxhash = "0.2.1"

[dev-dependencies]
insta = "1.14.0"
indoc = "1.0"
test-generator = "0.3.0"
pretty_assertions = "1.2.1"
env_logger = "0.10.0"
